# pmf_dark

./: .gitignore  LICENSE  README.md  demo.ipynb  mat_fact_dark_div.ipynb  pyproject.toml
data/: env.csv  pool_darkdiv.csv  survey.csv  survey_counts.csv  truth.csv
extras/: evaluation.py  plots.py
src/pmf_dark/: __init__.py  darkdiv.py  inference.py  models.py
src/pmf_dark/data/: env.csv  survey.csv
tests/: test_darkdiv.py
