[project]
name = "pmf-dark"
version = "0.2.3"
description = "Modelling species dark diversity using bayesian Probabilistic Matrix Factorisation"
authors = [
    {name = "davidyshen",email = "contact@davidyshen.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "pyro-ppl (>=1.9.0,<2.0.0)",
    "torch (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "pmf_dark", from = "src" }]


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
